tests/idris2/operators/operators003/expected
1/1: Building Error1 (Error1.idr)
Error: Invalid fixity, typebind operator must be infixr 0.

Error1:3:10--3:21
 1 | module Error1
 2 |
 3 | typebind infixl 0 =@
              ^^^^^^^^^^^

Possible solutions:
 - Make it `infixr 0`: `typebind infixr 0 =@`
 - Remove the binding keyword: `infixl 0 =@`
1/1: Building Error2 (Error2.idr)
Error: Invalid fixity, typebind operator must be infixr 0.

Error2:3:10--3:21
 1 | module Error2
 2 |
 3 | typebind infixr 3 =@
              ^^^^^^^^^^^

Possible solutions:
 - Make it `infixr 0`: `typebind infixr 0 =@`
 - Remove the binding keyword: `infixr 3 =@`
1/1: Building Error3 (Error3.idr)
Error: Invalid fixity, typebind operator must be infixr 0.

Error3:3:10--3:21
 1 | module Error3
 2 |
 3 | typebind infixl 3 =@
              ^^^^^^^^^^^

Possible solutions:
 - Make it `infixr 0`: `typebind infixr 0 =@`
 - Remove the binding keyword: `infixl 3 =@`
